package modelos;

public class Reporte {

}
