@startuml Modelo_Clases
hide circle

' --- Personas ---
class Usuario {
    - documento : String
    - nombre : String
    - email : String
    - clave : String
    + registrarse() : void
    + login() : boolean
}

class Estudiante {
    - carrera : String
    - carnet : String
    - constancia : String
}

class Empleado {
    - idEmpleado : String
    - sector : String
    - profesion : String
}

class Administrador {
    - responsabilidad : String
    + gestionarMenu(menu: Menu) : void
    + gestionarInsumo(insumo: Insumo) : void
    + registrarConsumo(reserva: Reserva) : void
    + generarReporte(inicio: Date, fin: Date) : Reporte
}

' --- Comedor ---
class Menu {
    - idMenu : String
    - nombre : String
    - fechaInicio : Date
    - fechaFin : Date
    - tipoServicio : String
    - estado : String
    + mostrarPlatillos() : List<Platillo>
}

class Platillo {
    - idPlatillo : String
    - nombre : String
    - descripcion : String
    - porcionesDisponibles : int
    - informacionNutricional : String
    + calcularCostoPorcion() : Decimal
    + consumirPorciones(cantidad: int) : void
}

class Insumo {
    - idInsumo : String
    - nombre : String
    - cantidadDisponible : Decimal
    - fechaVencimiento : Date
    - proveedor : String
    - costoUnitario : Decimal
    + reservar(cantidad: Decimal) : boolean
    + descontar(cantidad: Decimal) : void
}

class Receta {
    - idReceta : String
    - cantidadPorPorcion : Decimal
    - unidad : String
}

class Turno {
    - idTurno : String
    - inicio : Time
    - fin : Time
    - capacidadMax : int
    - estado : String
    + cuposDisponibles() : int
}

class Reserva {
    - idReserva : String
    - fechaReserva : Date
    - horarioReservado : Time
    - estado : String
    - claveAcceso : String
    - cantidad : int
    + confirmar() : void
    + cancelar() : void
}

class Reporte {
    - idReporte : String
    - fechaGeneracion : Date
    - contenido : String
    + generarResumenReservas() : String
    + generarAnalisisStock() : String
}

class Notificacion {
    - idNotificacion : String
    - tipo : String
    - canal : String
    - fechaEnvio : Date
    - contenido : String
    + enviar(destinatario: Usuario) : boolean
}

' --- Herencia ---
Estudiante --|> Usuario
Empleado --|> Usuario
Administrador --|> Usuario

' --- Relaciones ---
Administrador "1" --> "*" Menu : gestiona
Administrador "1" --> "*" Insumo : gestiona
Administrador "1" --> "*" Reporte : genera

Menu "1" *-- "1..*" Platillo : contiene

' Receta como entidad que relaciona Platillo e Insumo
Platillo "1" --> "0..*" Receta : tiene
Receta "1" --> "1" Insumo : usa

Usuario "1" --> "0..*" Reserva : realiza
Reserva "*" --> "1" Turno : para
Reserva "*" --> "1" Platillo : incluye

Reporte "0..*" ..> "0..*" Reserva : analiza
Reporte "0..*" ..> "0..*" Insumo : analiza

' Notificaciones vinculadas a acciones (registro opcional)
Reserva "0..*" --> "0..*" Notificacion : genera
Administrador "0..*" --> "0..*" Notificacion : recibe

@enduml